--- a/client/photo-viewer.html
+++ b/client/photo-viewer.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <img src="ullr.png" class="photo"/>
-    <img src="monochrome-ullr.png"/>
+    <img src='monochrome-ullr.png'>
   </body>
 </html>
