--- a/client/photo-viewer.html
+++ b/client/photo-viewer.html
@@ -6,5 +6,6 @@
   <body>
     <img src="ullr.png" class="photo"/>
     <img src='monochrome-ullr.png'>
+    <img src='resized-ullr.png'>
   </body>
 </html>
